# telecom-churn-predictor

./: README.md
backend/: README.md  main.py  model.ipynb  pre-processing.ipynb  preprocessed_churn.csv  pyproject.toml  requirements.txt
backend/weights/: churn_ann.pt  scaler.pkl
frontend/src/: App.css  App.jsx
