[project]
name = "churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
